--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Agenda</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_form_add">FormAdd</string>
+    <string name="title_activity_form_add">Form Add Student</string>
+    <string name="title_activity_tests">Tests</string>
 
 </resources>
