--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_form_add">Form Add Student</string>
     <string name="title_activity_tests">Tests</string>
+    <string name="title_activity_detail_test">DetailTest</string>
 
 </resources>
