--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="title_activity_form_add">Form Add Student</string>
     <string name="title_activity_tests">Tests</string>
     <string name="title_activity_detail_test">DetailTest</string>
+    <string name="title_activity_map">Map</string>
+    <string name="google_maps_key">AIzaSyCQIbJeEBbbfl7HkrWDDPyAG_brFCnz2a4</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
